# advent_of_code_cli

./: Cargo.toml
src/: error.rs  main.rs  prelude.rs  utils.rs
src/days/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  mod.rs
