[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.29"
console = "0.15.2"
indicatif = {version = "0.17.2", features = ["default", "improved_unicode"]}
thiserror = "1.0.37"
